# cpp-coursework-tools

./: .gitignore  README.md  pyproject.toml
hwtool/: extract.py  hwtool.py
hwtool/extract/: extract.py
hwtool/mail/: differ.py  email_template.jinja  emailer.py  mail.py
hwtool/review/: review.py
hwtools/: README.md  pyproject.toml
hwtools/src/hwtools/: .gitignore  README.md  __init__.py  __main__.py  hwtool.py  project.py
hwtools/src/hwtools/extract/: __init__.py  decom.py  extract.py  gather_code.py
hwtools/src/hwtools/mail/: __init__.py  differ.py  email_template.jinja  emailer.py  mail.py  tinter.py
hwtools/src/hwtools/review/: review.py
stutestpy/: README.md  __init__.py  cases.py  checker.py  compiler.py  finder.py  matcher.py  pyproject.toml  result.py  tester.py  utils.py  worktree.py
stutestpy/src/stutestpy/: __init__.py  checker.py  compiler.py  finder.py  matcher.py  results.py  runner.py  tester.py  worktree.py
