[tool.poetry]
name = "cpp-coursework-collection-tools"
version = "0.1.0"
description = ""
authors = ["QuadnucYard <2380433991@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dataclasses-json = "^0.6.4"
jinja2 = "^3.1.3"
markdown = "^3.5.2"
openpyxl = "^3.1.2"
pandas = "^2.2.1"
py7zr = "^0.20.8"
pydantic-settings = "^2.2.1"
rarfile = "^4.1"
typer = "^0.9.0"
typing-extensions = "^4.10.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py311']

[tool.mypy]
strict = true
check_untyped_defs = false

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    # "E402",  # Module level import not at top of cell
    "E501",  # line too long, handled by black
    # "F403",  # from {name} import * used; unable to detect undefined names
    # "F405",  # {name} may be undefined, or defined from star imports
]

[tool.ruff.isort]
known-third-party = []
