[project]
name = "cpp-coursework-tools"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "QuadnucYard", email = "2380433991@qq.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.rye.workspace]
members = ["hwtools", "stutestpy"]

[tool.mypy]
strict = true
check_untyped_defs = false
disable_error_code = "import-untyped"
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    # "E402",  # Module level import not at top of cell
    "E501", # line too long, handled by black
    # "F403",  # from {name} import * used; unable to detect undefined names
    # "F405",  # {name} may be undefined, or defined from star imports
    "E741", # Ambiguous variable name
]

[tool.lint.isort]
known-third-party = []

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
