[project]
name = "hwtools"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "QuadnucYard", email = "2380433991@qq.com" }
]
dependencies = [
    "chardet>=5.2.0",
    "jinja2>=3.1.4",
    "markdown>=3.7",
    "more-itertools>=10.5.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.2",
    "premailer>=3.10.0",
    "py7zr>=0.22.0",
    "pydantic-settings>=2.5.2",
    "rarfile>=4.2",
    "rich>=13.8.1",
    "typer>=0.12.5",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
"hwtools" = "hwtools:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hwtools"]
